# kube-sc

./: .gitignore  Cargo.toml  Makefile  README.md  app.sc.yaml
src/: config.rs  main.rs  node.rs  ns.rs  pv.rs  storage_class.rs
