[package]
name = "kube-sc"
version = "0.1.0"
authors = ["xiaopengli89 <x.friday@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
k8s-openapi = { version = "0.8.0", default-features = false, features = ["v1_17"] }
serde_yaml = "0.8.11"
serde = { version = "1.0.111", features = ["derive"] }
clap = "3.0.0-beta.1"